--- a/formation.html
+++ b/formation.html
@@ -23,8 +23,8 @@
         <li><a href="formation.html">Formations</a></li>
         <li><a href="evenements.html">Évènements</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="panier.html">Panier</a></li>
-        <li><a href="paiement.html">Paiement</a></li>
+        <li><a href="panier.php">Panier</a></li>
+        <li><a href="paiement.php">Paiement</a></li>
         <li><a href="login.html">Connexion</a></li>
       </ul>
     </nav>
