--- a/paiement.html
+++ b/paiement.html
@@ -160,7 +160,7 @@
 
   <!-- HEADER -->
   <header>
-    <a href="paiement.html" class="logo-link" style="margin-left: 20px;">
+    <a href="paiement.php" class="logo-link" style="margin-left: 20px;">
       <img src="logo/Desktop - 3.png" alt="Centre de Formation" style="height: 80px;">
     </a>
 
@@ -171,8 +171,8 @@
         <li><a href="formation.php">Formations </a></li>
         <li><a href="evenements.html">Évènements </a></li>
         <li><a href="blog.html">Blog </a></li>
-        <li><a href="panier.html">Panier </a></li>
-        <li><a href="paiement.html">Paiement </a></li>
+        <li><a href="panier.php">Panier </a></li>
+        <li><a href="paiement.php">Paiement </a></li>
         <li><a href="login.html">Connexion </a></li>
       </ul>
     </nav>
@@ -189,7 +189,7 @@
       <li><a href="#">FAQ Paiement</a></li>
       <li><a href="#">Sécurité</a></li>
       <li><a href="#">Conditions Générales</a></li>
-      <li><a href="panier.html">Retour au Panier</a></li>
+      <li><a href="panier.php">Retour au Panier</a></li>
     </ol>
   </aside>
 
