--- a/panier.html
+++ b/panier.html
@@ -159,7 +159,7 @@
 
   <!-- HEADER -->
   <header>
-    <a href="panier.html" class="logo-link" style="margin-left: 20px;">
+    <a href="panier.php" class="logo-link" style="margin-left: 20px;">
       <img src="logo/Desktop - 3.png" alt="Centre de Formation" style="height: 80px;">
     </a>
 
@@ -170,8 +170,8 @@
         <li><a href="formation.php">Formations </a></li>
         <li><a href="evenements.html">Évènements </a></li>
         <li><a href="blog.html">Blog </a></li>
-        <li><a href="panier.html">Panier </a></li>
-        <li><a href="paiement.html">Paiement </a></li>
+        <li><a href="panier.php">Panier </a></li>
+        <li><a href="paiement.php">Paiement </a></li>
         <li><a href="login.html">Connexion </a></li>
       </ul>
     </nav>
@@ -187,8 +187,8 @@
     <ol>
       <li><a href="index.html">Retour à l'accueil</a></li>
       <li><a href="formation.php">Parcourir les cours</a></li>
-      <li><a href="panier.html">Mon Panier</a></li>
-      <li><a href="paiement.html">Paiement</a></li>
+      <li><a href="panier.php">Mon Panier</a></li>
+      <li><a href="paiement.php">Paiement</a></li>
     </ol>
   </aside>
 
@@ -265,7 +265,7 @@
             <span>70,000 DA</span>
           </div>
 
-          <a href="paiement.html" class="btn btn-primary checkout-btn" id="checkout-btn">Passer au paiement</a>
+          <a href="paiement.php" class="btn btn-primary checkout-btn" id="checkout-btn">Passer au paiement</a>
           <a href="formation.html" class="continue-shopping">Continuer vos achats</a>
         </div>
       </div>
