--- a/blog.html
+++ b/blog.html
@@ -399,7 +399,7 @@
         <li><a href="blog.html">Blog </a></li>
         <li><a href="panier.php">Panier </a></li>
         <li><a href="paiement.php">Paiement </a></li>
-        <li><a href="login.html">Connexion </a></li>
+        <li><a href="login.php">Connexion </a></li>
       </ul>
     </nav>
   </header>
