--- a/formation.html
+++ b/formation.html
@@ -12,7 +12,7 @@
 
   <!-- HEADER -->
   <header>
-    <a href="formation.html" class="logo-link" style="margin-left: 20px;">
+    <a href="formation.php" class="logo-link" style="margin-left: 20px;">
       <img src="logo/Desktop - 3.png" alt="Centre de Formation" style="height: 70px;">
     </a>
 
@@ -20,12 +20,12 @@
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="formation.html">Formations</a></li>
+        <li><a href="formation.php">Formations</a></li>
         <li><a href="evenements.html">Évènements</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="panier.php">Panier</a></li>
         <li><a href="paiement.php">Paiement</a></li>
-        <li><a href="login.html">Connexion</a></li>
+        <li><a href="login.php">Connexion</a></li>
       </ul>
     </nav>
   </header>
