--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- HEADER -->
     <header>
-        <a href="formation.html" class="logo-link" style="margin-left: 20px;">
+        <a href="formation.php" class="logo-link" style="margin-left: 20px;">
             <img src="logo/Desktop - 3.png" alt="Centre de Formation" style="height: 70px;">
         </a>
 
@@ -24,7 +24,7 @@
                 <li><a href="blog.html">Blog </a></li>
                 <li><a href="panier.php">Panier </a></li>
                 <li><a href="paiement.php">Paiement </a></li>
-                <li><a href="login.html">Connexion </a></li>
+                <li><a href="login.php">Connexion </a></li>
             </ul>
         </nav>
     </header>
@@ -63,8 +63,8 @@
                 </div>
 
                 <div class="hero-ctas">
-                    <a href="formation.html" class="btn btn-primary">Browse Courses</a>
-                    <a href="login.html" class="btn btn-secondary">Sign Up Free</a>
+                    <a href="formation.php" class="btn btn-primary">Browse Courses</a>
+                    <a href="signup.php" class="btn btn-secondary">Sign Up Free</a>
                 </div>
             </div>
             <div class="hero-image">
