--- a/login.html
+++ b/login.html
@@ -157,7 +157,7 @@
 
   <!-- HEADER -->
   <header>
-    <a href="login.html" class="logo-link" style="margin-left: 20px;">
+    <a href="login.php" class="logo-link" style="margin-left: 20px;">
       <img src="logo/Desktop - 3.png" alt="Centre de Formation" style="height: 80px;">
     </a>
 
@@ -170,7 +170,7 @@
         <li><a href="blog.html">Blog </a></li>
         <li><a href="panier.php">Panier </a></li>
         <li><a href="paiement.php">Paiement </a></li>
-        <li><a href="login.html">Connexion </a></li>
+        <li><a href="login.php">Connexion </a></li>
       </ul>
     </nav>
   </header>
