--- a/panier.html
+++ b/panier.html
@@ -172,7 +172,7 @@
         <li><a href="blog.html">Blog </a></li>
         <li><a href="panier.php">Panier </a></li>
         <li><a href="paiement.php">Paiement </a></li>
-        <li><a href="login.html">Connexion </a></li>
+        <li><a href="login.php">Connexion </a></li>
       </ul>
     </nav>
   </header>
@@ -266,7 +266,7 @@
           </div>
 
           <a href="paiement.php" class="btn btn-primary checkout-btn" id="checkout-btn">Passer au paiement</a>
-          <a href="formation.html" class="continue-shopping">Continuer vos achats</a>
+          <a href="formation.php" class="continue-shopping">Continuer vos achats</a>
         </div>
       </div>
     </section>
